force-app/main/default/objects/ChatResponse__c/ChatResponse__c.object-meta.xml
<CustomObject>
    <label>Chat Response</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>