force-app/main/default/objects/ChatResponse__c/fields/EndChat__c.field-meta.xml
<CustomField>
    <fullName>EndChat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Chat</label>
    <type>Checkbox</type>
</CustomField>