force-app/main/default/objects/ChatResponse__c/fields/MessageType__c.field-meta.xml
<CustomField>
    <fullName>MessageType__c</fullName>
    <defaultValue>&quot;inbound&quot;</defaultValue>
    <inlineHelpText>bookend-start  // inbound  //  outbound  //  bookend-end</inlineHelpText>
    <label>Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>