force-app/main/default/objects/ChatResponse__c/fields/TypingTime__c.field-meta.xml
<CustomField>
    <fullName>TypingTime__c</fullName>
    <inlineHelpText>in milliseconds</inlineHelpText>
    <label>Typing Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>