force-app/main/default/objects/ChatResponse__c/listViews/All_Responses.listView-meta.xml
<ListView>
    <fullName>All_Responses</fullName>
    <columns>NAME</columns>
    <columns>Keyword__c</columns>
    <columns>Response__c</columns>
    <columns>TypingTime__c</columns>
    <columns>MessageType__c</columns>
    <columns>Prompt__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Responses</label>
</ListView>